--- a/src/styles/ToolPage.module.css
+++ b/src/styles/ToolPage.module.css
@@ -23,6 +23,11 @@
   flex-direction: column;
   padding: 3rem 4rem;
   overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
 
 .inner {
